# react_django_shop

./: .gitignore  poetry.toml  pyproject.toml
backend/: db.sqlite3
backend/backend/: settings.py  urls.py
backend/base/: admin.py  models.py  serializer.py  signals.py  urls.py  views.py
backend/base/migrations/: 0001_initial.py  0002_order_shippingaddress_review_orderitem.py  0003_product_image.py  0004_review_createdat.py
backend/base/urls/: product_urls.py  user_urls.py
backend/base/views/: order_views.py  product_views.py  user_views.py
frontend/: .npmrc  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js  store.js
frontend/src/actions/: cartActions.js  orderActions.js  productActions.js  userActions.js
frontend/src/component/: CheckoutComponent.js  Footer.js  FormContainer.js  Header.js  Loader.js  Message.js  Paginate.js  PaypalComponent.js  Product.js  ProductCarousel.js  Rating.js  SearchBox.js
frontend/src/constants/: orderConstants.js  productConstants.js  userConstants.js
frontend/src/reducers/: cartReducers.js  orderReducers.js  productReducers.js  userReducers.js
frontend/src/screens/: CartScreen.js  HomeScreen.js  LoginScreen.js  OrderListScreen.js  OrderScreen.js  PaymentScreen.js  PlaceOrderScreens.js  ProductEditScreen.js  ProductListScreen.js  ProductScreen.js  ProfileScreen.js  RegisterScreen.js  ShippingScreen.js  UserEditScreen.js  UserListScreen.js
